--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bluetooth Device Connection</title>
     <style>
+
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
@@ -23,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h2>Bluetooth Device Interactions</h2>
+    <h2>Bluetooth Device Interactions tests bata</h2>
     <button id="connect">Connect to Device</button>
     <button id="sendPayload">Send Custom Payload</button>
     <div class="log" id="log"></div>
